First version of AST